cabal-version:      2.4
name:               hw-mathlog2202
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Maria Kozlovtseva, Alyona Cherepanova
maintainer:         -

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Solver, NF

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.12,
                      containers ^>= 0.6, 
                      mtl ^>= 2.2.2,
                      picosat == 0.1.6
    hs-source-dirs:   src
    default-language: Haskell2010

executable hw-mathlog2202
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.12.0.0,
        containers ^>= 0.6, 
        mtl ^>= 2.2.2,
        picosat == 0.1.6,
        hw-mathlog2202

    hs-source-dirs:   app
    default-language: Haskell2010



